methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:35: error: Unmatched closing brace '}' ignored here
}
^